--- a/seance6.ipynb
+++ b/seance6.ipynb
@@ -28,6 +28,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.501500076001311e+22\n",
+      "98019899.49751785\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import math\n",
+    "\n",
+    "def integrale(f, a, b, n):\n",
+    "    \n",
+    "    integrale = 0\n",
+    "    k=a;\n",
+    "    while(k < b):\n",
+    "        largeur = (b-a)/n\n",
+    "        hauteur = f(a + k*(b-a)/n)\n",
+    "        aire = largeur * hauteur\n",
+    "        integrale += aire\n",
+    "        k+=n\n",
+    " \n",
+    "    return integrale\n",
+    "    \n",
+    "    \n",
+    "f = lambda x : 3*x**3 + 2*x - 1\n",
+    "print(integrale(f,0,10,0.001))\n",
+    "\n",
+    "     \n",
+    "import math\n",
+    "g = lambda x : math.cos(1/x)\n",
+    "print(integrale(g,0.1,10,0.001))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -49,6 +97,66 @@
     "2. Écrire une fonction pythonintegrale_trapezes(a, b, n) qui calcule l’intégrale de la fonction f(x) de a à b avec n intervalles, en faisant au plus n+ 1 appels à la fonction f.\n",
     "3. Pour $f(x) =xsin(x2)$, calculez l’erreur numérique de son intégrale sur l’intervalle [0,√π], pour 2 à 30 intervalles."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "2-Écrire une fonction pythonintegrale_trapezes(a, b, n) qui calcule l’intégrale de la fonction f(x) de a à b avec n intervalles, en faisant au plus n+ 1 appels à la fonction f."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def trapezes(f, a, b, N):\n",
+    "     pas = (b-a) / N\n",
+    "     x = a\n",
+    "     somme = (f(a) + f(b)) / 2\n",
+    "    \n",
+    "     for _ in range(N-1):\n",
+    "        x += pas\n",
+    "        somme += f(x)\n",
+    "     return somme / N\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3333500000000004"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trapezes(lambda x: x**2, 0, 1, 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -67,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
